rendered/envs/demo/rancher/deployment-rancher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    reloader.stakater.com/auto: "true"
  labels:
    app: rancher
    chart: rancher-2.12.0
    heritage: Helm
    release: rancher
  name: rancher
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rancher
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rancher
        release: rancher
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/os
                    operator: NotIn
                    values:
                      - windows
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - rancher
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - args:
            - --no-cacerts
            - --http-listen-port=80
            - --https-listen-port=443
            - --add-local=true
          image: docker.io/rancher/rancher:v2.12.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 80
            periodSeconds: 30
            timeoutSeconds: 5
          name: rancher
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 6666
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 80
            periodSeconds: 30
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 12
            httpGet:
              path: /healthz
              port: 80
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts: null
      priorityClassName: rancher-critical
      serviceAccountName: rancher
      tolerations:
        - effect: NoSchedule
          key: cattle.io/os
          operator: Equal
          value: linux
      volumes: null
