rendered/envs/demo/rancher/service-rancher.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
  labels:
    app: rancher
    chart: rancher-2.10.2
    heritage: Helm
    release: rancher
  name: rancher
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https-internal
      port: 443
      protocol: TCP
      targetPort: 444
  selector:
    app: rancher
