rendered/envs/demo/rancher/ingressroute-rancher.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    coroot.com/custom-application-name: rancher
    external-dns.alpha.kubernetes.io/target: lb.demo.budd.ee
    kubernetes.io/ingress.class: traefik
  name: rancher
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`rancher.demo.budd.ee`)
      priority: 10
      services:
        - name: rancher
          port: 80
